--- a/README.adoc
+++ b/README.adoc
@@ -23,9 +23,10 @@ ifdef::env-github[]
 :warning-caption: :warning:
 :icongit: Git
 endif::[]
-
+s
 //---------------------------------------------------------------
 
+Ce TP vise à reprendre les diagrammes des UC et les lier avec le diagramme de classe.
 
 == À propos...
 
